Match-id-2c47405d43b3d86acfd910590fc46a4ff8f2c75c

--- a/api/external/api-job.yaml
+++ b/api/external/api-job.yaml
@@ -12,6 +12,7 @@ tags:
 paths:
   /v1/jobs:
     get:
+      x-dr-role: 'N'
       x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
@@ -132,9 +133,9 @@ paths:
         - name: statusList
           in: query
           description: >-
-            '任务状态[取值范围]READY:准备中 PENDING排队中 RUNNING:运行中 SUCCESS:成功
+            '''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''任务状态[取值范围]READY:准备中 PENDING排队中 RUNNING:运行中 SUCCESS:成功
             PARTIAL_SUCCESS:部分成功 ABORTED: 停止 ABORTING: 停止中 FAIL:失败 ABNORMAL:异常
-            CANCELLED:取消 ABORT_FAILED:停止失败'
+            CANCELLED:取消 ABORT_FAILED:停止失败'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
           required: false
           type: array
           items:
@@ -181,6 +182,12 @@ paths:
           items:
             type: string
           collectionFormat: multi
+        - name: excludeTypes
+          in: query
+          required: false
+          description: 是否需要排除掉传入的任务类型
+          type: boolean
+          default: false
         - name: logLevels
           in: query
           required: false
@@ -315,9 +322,9 @@ paths:
         - name: statusList
           in: query
           description: >-
-            '任务状态[取值范围]READY:准备中 PENDING排队中 RUNNING:运行中 SUCCESS:成功
+            ''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''任务状态[取值范围]READY:准备中 PENDING排队中 RUNNING:运行中 SUCCESS:成功
             PARTIAL_SUCCESS:部分成功 ABORTED: 停止 ABORTING: 停止中 FAIL:失败 ABNORMAL:异常
-            CANCELLED:取消 ABORT_FAILED:停止失败'
+            CANCELLED:取消 ABORT_FAILED:停止失败''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
           required: false
           type: array
           items:
@@ -617,6 +624,45 @@ paths:
       security:
         - Authorization:
             - global
+  /v1/jobs/{jobId}/tag:
+    put:
+      x-dr-role: 'N'
+      x-product: CyberEngine,OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      tags:
+        - Job API
+      summary: 设置任务备注信息
+      description: 在任务管理界面中，支持对运行中的任务和已完成的任务设置描述信息。
+      operationId: setJobTagUsingPUT
+      consumes:
+        - application/json
+      parameters:
+        - name: jobId
+          in: path
+          required: true
+          type: string
+          description: 任务id
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: Access token
+          type: string
+        - name: tag
+          in: query
+          required: true
+          description: 任务备注信息（不为空，最大长度支持64）
+          type: string
+      responses:
+        '200':
+          description: OK
 securityDefinitions:
   Authorization:
     type: apiKey
