Match-id-968d8d34930f2372f92e30f5186adb0ad5a2e6c6

--- a/api/external/api-protect-agent.yaml
+++ b/api/external/api-protect-agent.yaml
@@ -1138,9 +1138,9 @@ definitions:
   AgentLanFreeViewDTO:
     type: object
     properties:
-      agentLanFreeWwpnView:
+      wwpns:
         description: wwpn信息
         $ref: '#/definitions/AgentLanFreeWwpnView'
-      agentLanFreeFcPortView:
+      fcPorts:
         description: FC端口信息
         $ref: '#/definitions/AgentLanFreeFcPortView'
