--- a/model/src/main/resources/api-fileset-template.yaml
+++ b/model/src/main/resources/api-fileset-template.yaml
@@ -1,299 +1,344 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  version: "v1"
-  title: "文件集模板接口"
+  version: v1
+  title: 文件集模板接口
   contact: {}
   license: {}
-host: "localhost"
-basePath: "/"
+host: localhost
+basePath: /
 tags:
-- name: "fileset-templates-api"
-  description: "File Set Template Controller"
+  - name: fileset-templates-api
+    description: File Set Template Controller
 paths:
   /v1/plugins/host/filesystem/filesets/templates:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
-      - "fileset-templates-api"
-      summary: "分页查询文件集模板列表"
-      operationId: "listUsingGET"
+        - fileset-templates-api
+      summary: 分页查询文件集模板列表
+      operationId: listUsingGET
       produces:
-      - "*/*"
+        - '*/*'
       parameters:
-      - name: "X-Auth-Token"
-        in: "header"
-        description: "Access token"
-        required: true
-        type: "string"
-      - name: "conditions"
-        in: "query"
-        description: "分页查询参数"
-        required: false
-        type: "string"
-        maxLength: 2147483647
-        minLength: 0
-        allowEmptyValue: false
-      - name: "orders"
-        in: "query"
-        description: "分页查询排序字段"
-        required: false
-        type: "string"
-        maxLength: 2147483647
-        minLength: 0
-        allowEmptyValue: false
-      - name: "pageNo"
-        in: "query"
-        description: "分页起始页"
-        required: false
-        type: "integer"
-        default: 0
-        format: "int32"
-        allowEmptyValue: false
-      - name: "pageSize"
-        in: "query"
-        description: "分页大小"
-        required: false
-        type: "integer"
-        default: 20
-        format: "int32"
-        allowEmptyValue: false
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - name: conditions
+          in: query
+          description: 分页查询参数
+          required: false
+          type: string
+          maxLength: 2147483647
+          minLength: 0
+        - name: orders
+          in: query
+          description: 分页查询排序字段
+          required: false
+          type: string
+          maxLength: 2147483647
+          minLength: 0
+        - name: pageNo
+          in: query
+          description: 分页起始页
+          required: false
+          type: integer
+          default: 0
+          format: int32
+        - name: pageSize
+          in: query
+          description: 分页大小
+          required: false
+          type: integer
+          default: 20
+          format: int32
       responses:
-        "200":
-          description: "OK"
+        '200':
+          description: OK
           schema:
-            $ref: "#/definitions/PageListResponse«FilesetTemplate»"
-            originalRef: "PageListResponse«FilesetTemplate»"
-        "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
-        "404":
-          description: "Not Found"
+            $ref: '#/definitions/PageListResponse«FilesetTemplate»'
+            originalRef: PageListResponse«FilesetTemplate»
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
       security:
-      - Authorization:
-        - "global"
+        - Authorization:
+            - global
       deprecated: false
     post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
-      - "fileset-templates-api"
-      summary: "创建文件集模板"
-      operationId: "createUsingPOST"
+        - fileset-templates-api
+      summary: 创建文件集模板
+      operationId: createFilesetTemplateUsingPOST
       consumes:
-      - "application/json"
+        - application/json
       produces:
-      - "*/*"
+        - '*/*'
       parameters:
-      - name: "X-Auth-Token"
-        in: "header"
-        description: "Access token"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "filesetTemplate"
-        description: "创建文件集模板参数"
-        required: false
-        schema:
-          $ref: "#/definitions/FilesetTemplate"
-          originalRef: "FilesetTemplate"
-      responses:
-        "200":
-          description: "OK"
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - in: body
+          name: filesetTemplate
+          description: 创建文件集模板参数
+          required: false
           schema:
-            $ref: "#/definitions/UuidObject"
-            originalRef: "UuidObject"
-        "201":
-          description: "Created"
-        "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
-        "404":
-          description: "Not Found"
+            $ref: '#/definitions/FilesetTemplate'
+            originalRef: FilesetTemplate
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/UuidObject'
+            originalRef: UuidObject
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
       security:
-      - Authorization:
-        - "global"
+        - Authorization:
+            - global
       deprecated: false
     put:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
-      - "fileset-templates-api"
-      summary: "修改文件集模板"
-      operationId: "updateUsingPUT"
+        - fileset-templates-api
+      summary: 修改文件集模板
+      operationId: updateUsingPUT
       consumes:
-      - "application/json"
+        - application/json
       produces:
-      - "*/*"
+        - '*/*'
       parameters:
-      - name: "X-Auth-Token"
-        in: "header"
-        description: "Access token"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "filesetTemplate"
-        description: "修改文件集模板参数"
-        required: false
-        schema:
-          $ref: "#/definitions/FilesetTemplate"
-          originalRef: "FilesetTemplate"
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - in: body
+          name: filesetTemplate
+          description: 修改文件集模板参数
+          required: false
+          schema:
+            $ref: '#/definitions/FilesetTemplate'
+            originalRef: FilesetTemplate
       responses:
-        "200":
-          description: "OK"
-        "201":
-          description: "Created"
-        "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
-        "404":
-          description: "Not Found"
+        '200':
+          description: OK
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
       security:
-      - Authorization:
-        - "global"
+        - Authorization:
+            - global
       deprecated: false
   /v1/plugins/host/filesystem/filesets/templates/{templateId}:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
-      - "fileset-templates-api"
-      summary: "查询指定文件集模板"
-      operationId: "queryFilesetTemplateByIdUsingGET"
+        - fileset-templates-api
+      summary: 查询指定文件集模板
+      operationId: queryFilesetTemplateByIdUsingGET
       produces:
-      - "*/*"
+        - '*/*'
       parameters:
-      - name: "X-Auth-Token"
-        in: "header"
-        description: "Access token"
-        required: true
-        type: "string"
-      - name: "templateId"
-        in: "path"
-        description: "查询文件集模板Id"
-        required: false
-        type: "string"
-        maxLength: 36
-        minLength: 0
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - name: templateId
+          in: path
+          description: 查询文件集模板Id
+          required: false
+          type: string
+          maxLength: 36
+          minLength: 0
       responses:
-        "200":
-          description: "OK"
+        '200':
+          description: OK
           schema:
-            $ref: "#/definitions/FilesetTemplate"
-            originalRef: "FilesetTemplate"
-        "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
-        "404":
-          description: "Not Found"
+            $ref: '#/definitions/FilesetTemplate'
+            originalRef: FilesetTemplate
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
       security:
-      - Authorization:
-        - "global"
+        - Authorization:
+            - global
       deprecated: false
     delete:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
-      - "fileset-templates-api"
-      summary: "删除文件集模板"
-      operationId: "deleteUsingDELETE"
+        - fileset-templates-api
+      summary: 删除文件集模板
+      operationId: deleteUsingDELETE
       produces:
-      - "*/*"
+        - '*/*'
       parameters:
-      - name: "X-Auth-Token"
-        in: "header"
-        description: "Access token"
-        required: true
-        type: "string"
-      - name: "templateId"
-        in: "path"
-        description: "删除文件集模板Id"
-        required: false
-        type: "string"
-        maxLength: 36
-        minLength: 0
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - name: templateId
+          in: path
+          description: 删除文件集模板Id
+          required: false
+          type: string
+          maxLength: 36
+          minLength: 0
       responses:
-        "200":
-          description: "OK"
-        "204":
-          description: "No Content"
-        "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
+        '200':
+          description: OK
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
       security:
-      - Authorization:
-        - "global"
+        - Authorization:
+            - global
       deprecated: false
 securityDefinitions:
   Authorization:
-    type: "apiKey"
-    name: "TOKEN"
-    in: "header"
+    type: apiKey
+    name: TOKEN
+    in: header
 definitions:
   FilesetTemplate:
-    type: "object"
+    type: object
     required:
-    - "files"
+      - files
     properties:
       associatedFilesetsNum:
-        type: "integer"
-        format: "int32"
+        type: integer
+        format: int32
       files:
-        type: "array"
+        type: array
         items:
-          type: "string"
+          type: string
       filters:
-        type: "array"
+        type: array
         items:
-          $ref: "#/definitions/Filter"
-          originalRef: "Filter"
+          $ref: '#/definitions/Filter'
+          originalRef: Filter
       name:
-        type: "string"
+        type: string
         minLength: 1
         maxLength: 32
-        pattern: "^[a-zA-Z0-9_\\u4e00-\\u9fa5]{1}[\\u4e00-\\u9fa5\\w-]*$"
+        pattern: ^[a-zA-Z0-9_\u4e00-\u9fa5]{1}[\u4e00-\u9fa5\w-]*$
       osType:
-        type: "string"
+        type: string
         minLength: 1
         maxLength: 16
       userId:
-        type: "string"
+        type: string
       uuid:
-        type: "string"
-    title: "FilesetTemplate"
+        type: string
+    title: FilesetTemplate
   Filter:
-    type: "object"
+    type: object
     required:
-    - "filterBy"
-    - "mode"
-    - "type"
+      - filterBy
+      - mode
+      - type
     properties:
       filterBy:
-        type: "string"
+        type: string
       mode:
-        type: "string"
+        type: string
       rule:
-        type: "string"
+        type: string
       type:
-        type: "string"
+        type: string
       values:
-        type: "array"
+        type: array
         items:
-          type: "string"
-    title: "Filter"
+          type: string
+    title: Filter
   PageListResponse«FilesetTemplate»:
-    type: "object"
+    type: object
     properties:
       records:
-        type: "array"
-        description: "分页查询结果列表"
+        type: array
+        description: 分页查询结果列表
         items:
-          $ref: "#/definitions/FilesetTemplate"
-          originalRef: "FilesetTemplate"
+          $ref: '#/definitions/FilesetTemplate'
+          originalRef: FilesetTemplate
       totalCount:
-        type: "integer"
-        format: "int32"
-        description: "总数"
-    title: "PageListResponse«FilesetTemplate»"
+        type: integer
+        format: int32
+        description: 总数
+    title: PageListResponse«FilesetTemplate»
   UuidObject:
-    type: "object"
+    type: object
     properties:
       uuid:
-        type: "string"
-    title: "UuidObject"
+        type: string
+    title: UuidObject
