Match-id-9a07d646cd17700d44eaf11ece2a9a0b9c894bcf

--- a/api/external/api-alarm.yaml
+++ b/api/external/api-alarm.yaml
@@ -286,7 +286,7 @@ paths:
       tags:
         - alarm-and-event-api
       summary: 批量查询告警对象
-      operationId: findPageUsingGET
+      operationId: findObjectsPageUsingGET
       produces:
         - '*/*'
       parameters:
